FIX: hide arrow for collapse category with open modal

--- a/src/admin/ui/Modal/index.module.sass
+++ b/src/admin/ui/Modal/index.module.sass
@@ -1,7 +1,7 @@
 .modal
     background-color: rgba(#2A2C38, .7)
     backdrop-filter: blur(10px)
-    @apply absolute inset-0 flex items-center justify-center
+    @apply absolute inset-0 z-10 flex items-center justify-center
     &__content
         @apply max-w-2xl w-full bg-gray rounded-xl flex flex-col
     &__header
